--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 
     id("org.jlleitschuh.gradle.ktlint") version "12.1.0"
-
 }
 
 android {
@@ -35,16 +34,15 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
-    ktlint{
-        android = true
-        ignoreFailures = false
-        reporters {
-            reporter "plain"
-            reporter "checkstyle"
-            reporter "sarif"
-        }
-    }
-
+//    ktlint{
+//        android = true
+//        ignoreFailures = false
+//        reporters {
+//            reporter "plain"
+//            reporter "checkstyle"
+//            reporter "sarif"
+//        }
+//    }
 
 }
 
@@ -58,7 +56,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
 }
 
 tasks.register('installGitHook', Copy) {
