--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,23 @@ android {
 
 }
 
+tasks.register('ktlintCheckChanged', Exec) {
+    dependsOn 'ktlintCheck'
+    onlyIf { gradle.startParameter.taskNames.contains('ktlintCheckChanged') }
+
+    doLast {
+        // Use Git commands to get the list of changed files
+        def changedFiles = 'git diff --name-only HEAD'.text.trim().split('\n')
+
+        // Run Ktlint only on the changed files
+        project.ktlint.additionalEditorconfigFiles = []
+        project.ktlint.source = changedFiles
+        project.ktlint.dependencyCheck = false
+
+        project.ktlint.main()
+    }
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
