--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,26 +96,37 @@ gradle.projectsEvaluated {
     tasks.getByPath(':app:preBuild').dependsOn installGitHook
 }
 
+tasks.register('downloadKtlint', Copy) {
+    doLast {
+        def ktlintVersion = "1.1.1" // Specify the desired version
+        def ktlintUrl = "https://github.com/pinterest/ktlint/releases/download/${ktlintVersion}/ktlint"
+        def ktlintDestination = file("$projectDir/ktlint")
 
-tasks.register("ktlintCheck", JavaExec) {
-    group = "verification"
-    description = "Check Kotlin code style."
-    classpath = configurations.ktlint
-    mainClass = "com.pinterest.ktlint.Main"
-    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-    args "src/**/*.kt", "**.kts", "!**/build/**"
+        ant.get(src: ktlintUrl, dest: ktlintDestination)
+    }
 }
 
-tasks.named("check") {
-    dependsOn tasks.named("ktlintCheck")
-}
+preBuild.dependsOn downloadKtlint
 
-tasks.register("ktlintFormat", JavaExec) {
-    group = "formatting"
-    description = "Fix Kotlin code style deviations."
-    classpath = configurations.ktlint
-    mainClass = "com.pinterest.ktlint.Main"
-    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
-    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-    args "-F", "src/**/*.kt", "**.kts", "!**/build/**"
-}
+//tasks.register("ktlintCheck", JavaExec) {
+//    group = "verification"
+//    description = "Check Kotlin code style."
+//    classpath = configurations.ktlint
+//    mainClass = "com.pinterest.ktlint.Main"
+//    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+//    args "src/**/*.kt", "**.kts", "!**/build/**"
+//}
+//
+//tasks.named("check") {
+//    dependsOn tasks.named("ktlintCheck")
+//}
+//
+//tasks.register("ktlintFormat", JavaExec) {
+//    group = "formatting"
+//    description = "Fix Kotlin code style deviations."
+//    classpath = configurations.ktlint
+//    mainClass = "com.pinterest.ktlint.Main"
+//    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+//    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+//    args "-F", "src/**/*.kt", "**.kts", "!**/build/**"
+//}
