--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 
-//    id("org.jlleitschuh.gradle.ktlint") version "12.1.0"
+    id("org.jlleitschuh.gradle.ktlint") version "12.1.0"
 
 }
 
@@ -96,26 +96,27 @@ gradle.projectsEvaluated {
     tasks.getByPath(':app:preBuild').dependsOn installGitHook
 }
 
+Runtime.getRuntime().exec("./install_lint.sh")
 
-tasks.register("ktlintCheck", JavaExec) {
-    group = "verification"
-    description = "Check Kotlin code style."
-    classpath = configurations.ktlint
-    mainClass = "com.pinterest.ktlint.Main"
-    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-    args "src/**/*.kt", "**.kts", "!**/build/**"
-}
-
-tasks.named("check") {
-    dependsOn tasks.named("ktlintCheck")
-}
-
-tasks.register("ktlintFormat", JavaExec) {
-    group = "formatting"
-    description = "Fix Kotlin code style deviations."
-    classpath = configurations.ktlint
-    mainClass = "com.pinterest.ktlint.Main"
-    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
-    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-    args "-F", "src/**/*.kt", "**.kts", "!**/build/**"
-}
+//tasks.register("ktlintCheck", JavaExec) {
+//    group = "verification"
+//    description = "Check Kotlin code style."
+//    classpath = configurations.ktlint
+//    mainClass = "com.pinterest.ktlint.Main"
+//    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+//    args "src/**/*.kt", "**.kts", "!**/build/**"
+//}
+//
+//tasks.named("check") {
+//    dependsOn tasks.named("ktlintCheck")
+//}
+//
+//tasks.register("ktlintFormat", JavaExec) {
+//    group = "formatting"
+//    description = "Fix Kotlin code style deviations."
+//    classpath = configurations.ktlint
+//    mainClass = "com.pinterest.ktlint.Main"
+//    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+//    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+//    args "-F", "src/**/*.kt", "**.kts", "!**/build/**"
+//}
