--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,3 +92,16 @@ gradle.projectsEvaluated {
 }
 
 Runtime.getRuntime().exec("./install_lint.sh")
+
+tasks.register('downloadKtlint', Copy) {
+    doLast {
+        from 'scripts/install_ktlint.sh'  // Update the path accordingly
+        into project.projectDir
+        rename { "ktlint" }
+        includeEmptyDirs = false
+        filter { line -> line.replace("chmod +x", "") }
+    }
+}
+
+preBuild.dependsOn downloadKtlint
+
